Improved Assembler Working on Fixing Hardware Emulated Cpu